--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ tqdm = "^4.66.2"
 asyncio = "^3.4.3"
 pydantic = "^2.6.4"
 python-dotenv = "^1.0.1"
+llama-index = "^0.10.27"
+jinja2 = "^3.1.3"
+pydantic-settings = "^2.2.1"
+ftfy = "^6.2.0"
 
 [build-system]
 requires = ["poetry-core"]
